--- a/xbmc/platform/darwin/ios/LaunchScreen.storyboard
+++ b/xbmc/platform/darwin/ios/LaunchScreen.storyboard
@@ -15,10 +15,21 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="kmc-Cc-145">
+                                <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
+                        <constraints>
+                            <constraint firstItem="kmc-Cc-145" firstAttribute="leading" secondItem="Jnx-JV-IwA" secondAttribute="leading" id="UuH-L0-zyS"/>
+                            <constraint firstAttribute="bottom" secondItem="kmc-Cc-145" secondAttribute="bottom" id="Yxl-eS-Vyf"/>
+                            <constraint firstItem="Jnx-JV-IwA" firstAttribute="trailing" secondItem="kmc-Cc-145" secondAttribute="trailing" id="fNY-Bi-9ZO"/>
+                            <constraint firstItem="kmc-Cc-145" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="p00-Qn-qGF"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Jnx-JV-IwA"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -26,4 +37,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="splash.jpg" width="1920" height="1080"/>
+    </resources>
 </document>
